--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,9 @@ description: > # your text below (remove <br> elements if you don't need line br
   Currently I'm working on improving vectorization for 3d and 2d data using deep learning and algorithms.
   <br><br>
   [Email](mailto:vahe527887@yandex.ru) <a href="https://www.linkedin.com/mwlite/in/vage-egiazarian-47b18a138">Linkedin</a>
-  [![linkedin](image/linkedin.jpg)](https://www.linkedin.com/mwlite/in/vage-egiazarian-47b18a138)
-  
+#  [![linkedin](image/linkedin.jpg)](https://www.linkedin.com/mwlite/in/vage-egiazarian-47b18a138)
+  <a href="https://www.linkedin.com/mwlite/in/vage-egiazarian-47b18a138/">
+    <img src="image/linkedin.jpg" alt="linkedin link" />
+  </a>
 theme: jekyll-theme-minimal
 google_analytics: # your Google Analytics tracking ID here
