--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,9 @@ description: > # your text below (remove <br> elements if you don't need line br
   I'm 4-rd year PhD student in  Deep Learning specializing in Computer Vision and Computer Graphics.
   Currently I'm working on improving vectorization for 3d and 2d data using deep learning and algorithms.
   <br><br>
-#  [Email](mailto:vahe527887@yandex.ru) <a href="https://www.linkedin.com/mwlite/in/vage-egiazarian-47b18a138">Linkedin</a>
-
+  ![Email](mailto:vahe527887@yandex.ru) 
+  <a href="https://www.linkedin.com/mwlite/in/vage-egiazarian-47b18a138">Linkedin</a>
+  <a href="https://www.linkedin.com/mwlite/in/vage-egiazarian-47b18a138">Linkedin</a>
+  <a href="https://scholar.google.ru/citations?user=Bktg6JEAAAAJ&hl=ru">Linkedin</a>
 theme: jekyll-theme-minimal
 google_analytics: # your Google Analytics tracking ID here
