--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-#title: Vage Egiazarian # your name (or website title) here
+title: Vage Egiazarian # your name (or website title) here
 #logo: "/images/logo.jpg?raw=true" # your photo (or logo) here
 #description: > # your text below (remove <br> elements if you don't need line breaks)
 #  I'm 4-rd year PhD student in  Deep Learning specializing in Computer Vision and Computer Graphics.
