--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,4 @@ title: Vage Egiazarian # your name (or website title) here
 ##  ![Email](mailto:vahe527887@yandex.ru)
 ##  <a href="https://www.linkedin.com/mwlite/in/vage-egiazarian-47b18a138">Linkedin</a>
 ##  <a href="https://scholar.google.ru/citations?user=Bktg6JEAAAAJ&hl=ru">Linkedin</a>
-#theme: jekyll-theme-minimal
+theme: jekyll-theme-minimal
