--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Vage Egiazarian # your name (or website title) here
 logo: "/images/logo.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  I'm 4-rd year PhD student in  Deep Learning specializing in Computer Vision and Computer Graphics.
-  Currently I'm working on improving vectorization for 3d and 2d data using deep learning and algorithms.
+  I'm fourth year PhD student in Deep Learning specializing in Computer Vision and Computer Graphics. 
+  Currently I'm working on improving vectorization for 3d and 2d data using deep learning and algorithms
   <br><br>
 
 theme: jekyll-theme-minimal
