--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,5 @@ description: > # your text below (remove <br> elements if you don't need line br
 
   <br><br>
 
-theme: jekyll-theme-architect
+theme: jekyll-theme-minimal
 google_analytics: # your Google Analytics tracking ID here
